--- a/Birlik_Mobile/Components/Layout/NavMenu.razor
+++ b/Birlik_Mobile/Components/Layout/NavMenu.razor
@@ -163,6 +163,26 @@
                             </div>
                         </NavLink>
                         
+                        <NavLink href="/operativo/inclusiones" class="nav-item" @onclick="CloseMenu">
+                            <div class="nav-icon">
+                                <i class="bi bi-person-plus"></i>
+                            </div>
+                            <span class="nav-text">Inclusiones</span>
+                            <div class="nav-arrow">
+                                <i class="bi bi-chevron-right"></i>
+                            </div>
+                        </NavLink>
+                        
+                        <NavLink href="/operativo/siniestros" class="nav-item" @onclick="CloseMenu">
+                            <div class="nav-icon">
+                                <i class="bi bi-exclamation-triangle"></i>
+                            </div>
+                            <span class="nav-text">Siniestros</span>
+                            <div class="nav-arrow">
+                                <i class="bi bi-chevron-right"></i>
+                            </div>
+                        </NavLink>
+                        
                         <NavLink href="/operativo/produccion" class="nav-item" @onclick="CloseMenu">
                             <div class="nav-icon">
                                 <i class="bi bi-bar-chart-line"></i>
